Added in postcss-sprites example

--- a/src/stylus/app.styl
+++ b/src/stylus/app.styl
@@ -23,3 +23,13 @@ section
     background: svg-inline(nav);
     width: width('pizza.svg')
     height: height('pizza.svg')
+
+.donut
+    background: url('../sprite/donut.png')
+    width: width('../sprite/donut.png')
+    height: height('../sprite/donut.png')
+
+.balloon
+    background: url('../sprite/balloon.png')
+    width: width('../sprite/balloon.png')
+    height: height('../sprite/balloon.png')
