Added example of postcss-at2x used in conjuntion with postcss-sprites to produce retina sprites

--- a/src/stylus/app.styl
+++ b/src/stylus/app.styl
@@ -25,11 +25,11 @@ section
     height: height('pizza.svg')
 
 .donut
-    background: url('../sprite/donut.png')
+    background: url('../sprite/donut.png') at-2x;
     width: width('../sprite/donut.png')
     height: height('../sprite/donut.png')
 
 .balloon
-    background: url('../sprite/balloon.png')
+    background: url('../sprite/balloon.png') at-2x;
     width: width('../sprite/balloon.png')
     height: height('../sprite/balloon.png')
